manifests/dev/kong/GatewayClass-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
  name: kong
spec:
  controllerName: konghq.com/kic-gateway-controller
