manifests/dev/kong/Service-kong-gateway-admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
  name: kong-gateway-admin
  namespace: kong
spec:
  clusterIP: None
  ports:
    - name: kong-admin
      port: 8001
      protocol: TCP
      targetPort: 8001
    - name: kong-admin-tls
      port: 8444
      protocol: TCP
      targetPort: 8444
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
  type: ClusterIP
