manifests/dev/kong/ValidatingWebhookConfiguration-kong-controller-kong-validations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kong/kong-controller-validation-webhook-cert
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: controller
  name: kong-controller-kong-validations
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kong-controller-validation-webhook
        namespace: kong
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: secrets.credentials.validation.ingress-controller.konghq.com
    objectSelector:
      matchExpressions:
        - key: konghq.com/credential
          operator: Exists
        - key: konghq.com/credential
          operator: NotIn
          values:
            - konnect
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - secrets
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kong-controller-validation-webhook
        namespace: kong
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: secrets.plugins.validation.ingress-controller.konghq.com
    objectSelector:
      matchExpressions:
        - key: owner
          operator: NotIn
          values:
            - helm
        - key: konghq.com/credential
          operator: NotIn
          values:
            - konnect
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - secrets
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: kong-controller-validation-webhook
        namespace: kong
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: validations.kong.konghq.com
    objectSelector:
      matchExpressions:
        - key: owner
          operator: NotIn
          values:
            - helm
    rules:
      - apiGroups:
          - configuration.konghq.com
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - kongconsumers
          - kongplugins
          - kongclusterplugins
          - kongingresses
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - services
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
      - apiGroups:
          - gateway.networking.k8s.io
        apiVersions:
          - v1alpha2
          - v1beta1
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gateways
          - httproutes
    sideEffects: None
